// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A required Input 1`] = `
.c0 {
  border: solid 1px #C8CBCC;
  height: 28px;
  padding: 0 8px;
  border-radius: 4px;
  font-size: 14px;
}

<input
  className="c0"
  id="test"
  name="test"
  placeholder={undefined}
  required={true}
  theme={
    Object {
      "colors": Object {
        "borderColor": "#C8CBCC",
        "destructive": "#CC1F36",
        "destructiveDark": "#B2121F",
        "destructiveDarker": "#990F14",
        "destructiveLight": "#FF667A",
        "destructiveLighter": "#FFB8C1",
        "destructiveText": "#FFFFFF",
        "linkColor": "#3973E5",
        "primary": "#64518A",
        "primaryDark": "#473764",
        "primaryDarker": "#2A1B60",
        "primaryLight": "#E5D9FF",
        "primaryLighter": "#F1EBFF",
        "primaryText": "#FFFFFF",
      },
      "shadows": Object {
        "large": "0 6px 12px rgba(0, 0, 0, 0.12)",
        "medium": "0 4px 8px rgba(0, 0, 0, 0.12)",
        "small": "0 2px 4px rgba(0, 0, 0, 0.08)",
        "xlarge": "0 8px 16px rgba(0, 0, 0, 0.12)",
      },
      "spacing": Object {
        "l": "1.25rem",
        "m": "1rem",
        "s": "0.5rem",
        "xl": "1.5rem",
        "xs": "0.25rem",
        "xxl": "1.875rem",
        "xxxl": "2.25rem",
        "xxxxl": "2.875rem",
      },
      "transitions": Object {
        "durationLong": 375,
        "durationShort": 200,
        "durationShorter": 150,
        "durationStandard": 300,
      },
    }
  }
  type="text"
/>
`;

exports[`An Input 1`] = `
.c0 {
  border: solid 1px #C8CBCC;
  height: 28px;
  padding: 0 8px;
  border-radius: 4px;
  font-size: 14px;
}

<input
  className="c0"
  id="test"
  name="test"
  placeholder={undefined}
  required={undefined}
  theme={
    Object {
      "colors": Object {
        "borderColor": "#C8CBCC",
        "destructive": "#CC1F36",
        "destructiveDark": "#B2121F",
        "destructiveDarker": "#990F14",
        "destructiveLight": "#FF667A",
        "destructiveLighter": "#FFB8C1",
        "destructiveText": "#FFFFFF",
        "linkColor": "#3973E5",
        "primary": "#64518A",
        "primaryDark": "#473764",
        "primaryDarker": "#2A1B60",
        "primaryLight": "#E5D9FF",
        "primaryLighter": "#F1EBFF",
        "primaryText": "#FFFFFF",
      },
      "shadows": Object {
        "large": "0 6px 12px rgba(0, 0, 0, 0.12)",
        "medium": "0 4px 8px rgba(0, 0, 0, 0.12)",
        "small": "0 2px 4px rgba(0, 0, 0, 0.08)",
        "xlarge": "0 8px 16px rgba(0, 0, 0, 0.12)",
      },
      "spacing": Object {
        "l": "1.25rem",
        "m": "1rem",
        "s": "0.5rem",
        "xl": "1.5rem",
        "xs": "0.25rem",
        "xxl": "1.875rem",
        "xxxl": "2.25rem",
        "xxxxl": "2.875rem",
      },
      "transitions": Object {
        "durationLong": 375,
        "durationShort": 200,
        "durationShorter": 150,
        "durationStandard": 300,
      },
    }
  }
  type="text"
/>
`;

exports[`An Input with a placeholder 1`] = `
.c0 {
  border: solid 1px #C8CBCC;
  height: 28px;
  padding: 0 8px;
  border-radius: 4px;
  font-size: 14px;
}

<input
  className="c0"
  id="test"
  name="test"
  placeholder="🍕"
  required={undefined}
  theme={
    Object {
      "colors": Object {
        "borderColor": "#C8CBCC",
        "destructive": "#CC1F36",
        "destructiveDark": "#B2121F",
        "destructiveDarker": "#990F14",
        "destructiveLight": "#FF667A",
        "destructiveLighter": "#FFB8C1",
        "destructiveText": "#FFFFFF",
        "linkColor": "#3973E5",
        "primary": "#64518A",
        "primaryDark": "#473764",
        "primaryDarker": "#2A1B60",
        "primaryLight": "#E5D9FF",
        "primaryLighter": "#F1EBFF",
        "primaryText": "#FFFFFF",
      },
      "shadows": Object {
        "large": "0 6px 12px rgba(0, 0, 0, 0.12)",
        "medium": "0 4px 8px rgba(0, 0, 0, 0.12)",
        "small": "0 2px 4px rgba(0, 0, 0, 0.08)",
        "xlarge": "0 8px 16px rgba(0, 0, 0, 0.12)",
      },
      "spacing": Object {
        "l": "1.25rem",
        "m": "1rem",
        "s": "0.5rem",
        "xl": "1.5rem",
        "xs": "0.25rem",
        "xxl": "1.875rem",
        "xxxl": "2.25rem",
        "xxxxl": "2.875rem",
      },
      "transitions": Object {
        "durationLong": 375,
        "durationShort": 200,
        "durationShorter": 150,
        "durationStandard": 300,
      },
    }
  }
  type="text"
/>
`;
